# BlockyGame2

./: .gitignore  CMakeLists.txt  imgui.ini
include/glad/: glad.h
include/imgui/: imgui_impl_opengl3_loader.h
include/osn/: OpenSimplexNoise.h
res/shaders/: colored_lines.frag  colored_lines.vert  colored_ui.frag  colored_ui.vert  line.frag  line.vert  main.frag  main.vert  shape.frag  textured_ui.frag  textured_ui.vert
src/: main.cpp
src/block/: Block.cpp  Block.h  BlockTextures.h
src/debug/: DebugInformation.cpp  DebugInformation.h  DebugSettings.cpp  DebugSettings.h  DebugShapes.cpp  DebugShapes.h
src/engine/camera/: Camera.cpp  Camera.h
src/engine/io/: Input.cpp  Input.h  Time.cpp  Time.h  Window.cpp  Window.h
src/engine/rendering/: LineMesh.cpp  LineMesh.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h
src/engine/rendering/buffers/: IndexBuffer.cpp  IndexBuffer.h  ResourceGraveyard.cpp  ResourceGraveyard.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/engine/rendering/meshes/: ColoredLinesMesh.cpp  ColoredLinesMesh.h  LineMesh.cpp  Mesh.h  UIQuadMesh.cpp  UIQuadMesh.h
src/engine/rendering/textures/: Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  TextureAtlasBuilder.cpp  TextureAtlasBuilder.h
src/engine/rendering/ui/: UIBlock.cpp  UIBlock.h  UILayer.cpp  UILayer.h
src/engine/rendering/ui/drawables/: UIColoredQuad.cpp  UIColoredQuad.h  UIQuad.cpp  UIQuad.h  UITexturedQuad.cpp  UITexturedQuad.h
src/engine/rendering/ui/helpers/: Color.cpp  Color.h
src/engine/util/: ClassMacros.h  Color.cpp  Color.h  DebugMacros.h  FileUtil.cpp  FileUtil.h  GlmExtensions.h  Logging.cpp  Logging.h  MathUtil.h  Noise.cpp  Noise.h  OptionalMacros.h
src/engine/util/threadsafe/: ThreadSafePriorityQueue.h  ThreadSafeQueue.h  ThreadSafeReference.h  ThreadSafeUnorderedMap.h  ThreadSafeWrapper.h
src/entity/: Entity.cpp  Entity.h  PhysicsEntity.cpp  PhysicsEntity.h  PlayerEntity.cpp  PlayerEntity.h
src/init/: Blocks.cpp  Blocks.h
src/init/registry/: Registry.h  RegistryItem.cpp  RegistryItem.h
src/physics/: AABB.cpp  AABB.h  BoundingBox.cpp  BoundingBox.h
src/ui/: GameUI.cpp  GameUI.h  HotbarLayer.cpp  HotbarLayer.h
src/voxel/: Direction.cpp  Direction.h  VoxelData.cpp  VoxelData.h
src/world/: Chunk.cpp  Chunk.h  World.cpp  World.h
tests/: color.cpp  math.cpp  test_main.cpp
